quick fix for number of days

--- a/app/views/triggers/new.html.erb
+++ b/app/views/triggers/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_area :message_text, size: '50x10' %>
   <p>if I haven't checked my email in</p>
   <div class="toggle-up"></div>
-  <%= f.text_field :duration_in_hours, value: '1' %>
+  <%= f.text_field :duration_in_hours%>
   <div class="toggle-down"></div>
   <p>days</p>
   <%= f.submit %>
