added ajax supporter delete

--- a/app/views/supporters/show.html.erb
+++ b/app/views/supporters/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>Phone:</strong>
-  <%= @supporter.phone %>
+  <a href="<%= @supporter.phone.phony_formatted(:format => :international, spaces: "") %>">+<%= @supporter.phone %></a>
 </p>
 
 <p>
   <strong>Email:</strong>
-  <%= @supporter.gmail %>
+  <%= mail_to @supporter.gmail %>
 </p>
 
 <%= link_to 'Edit', edit_user_supporter_path(@user, @supporter) %>
