--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>ShiftApi</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' => true %>
+  <%= javascript_include_tag 'application' %>
 
   <%= csrf_meta_tags %>
 </head>
