--- a/app/views/triggers/new.html.erb
+++ b/app/views/triggers/new.html.erb
@@ -1,12 +1,12 @@
 <%= form_for @trigger do |f| %>
+<%= @error %>
   <p>Text my support network</p>
   <%= f.text_area :message_text, size: '50x10' %>
   <p>if I haven't checked my email in</p>
-  <div class="toggle-up"></div>
+  <div id="toggle-up" class="redSquare"></div>
   <%= f.text_field :duration_in_hours%>
-  <div class="toggle-down"></div>
+  <div id="toggle-down" class="redSquare"></div>
   <p>days</p>
   <%= f.submit %>
 <% end %>
-
-
+<div class="my_triggers"></div>
