Users can sign up, log in, the user dashboard has a link to oauth, setup contacts, and setup triggers

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
   <strong>Email:</strong>
   <%= @user.gmail %>
 </p>
-
+<%= link_to "Activate Passive Monitoring", '/auth/google_oauth2' %>
 <%= link_to 'Edit', edit_user_path(@user) %>
 <%= link_to 'My Circle', user_supporters_path(@user) %>
+<%= link_to "My Setup", new_trigger_path %>
