--- a/app/views/users/get_started.html.erb
+++ b/app/views/users/get_started.html.erb
@@ -28,8 +28,8 @@
     </div>
   </div>
   <div class='row' id='<%=@user.id%>'>
-    <div class='col-md-3' id='backButton'><h3>Go Back</h3></div>
-    <div class='col-md-3 col-md-offset-6' id='nextButton'><h3>Next Step</h3></div>
+    <div class='col-md-3' id='backButton'><h3><i class="fa fa-chevron-left"></i> Go Back</h3></div>
+    <div class='col-md-3 col-md-offset-6' id='nextButton'><h3>Next Step <i class="fa fa-chevron-right"></i></h3></div>
   </div>
   <div class='row'>
     <div class='col-xs-6' id='network'>
