User flow settings displays on user show

--- a/app/assets/stylesheets/get_started.css
+++ b/app/assets/stylesheets/get_started.css
@@ -18,8 +18,8 @@ h3 {
   margin: 0 auto;
 }
 
-.inline-block {
-  display: inline-block;
+.inline-flex {
+  display: inline-flex;
 }
 
 li.gstart:nth-child(even) {
