--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,7 @@
     </div>
   </div>
 </nav>
-<div id='userContainer'  class='settingsShow'>
-
-
+<div id='userContainer'>
   <div id='userHome'>
     <%= render "home", locals: {user: @user} %>
   </div>
