added sentiment analysis on twitter

--- a/app/assets/stylesheets/get_started.css
+++ b/app/assets/stylesheets/get_started.css
@@ -22,6 +22,10 @@ h3 {
   display: inline-flex;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 li.gstart:nth-child(even) {
   margin-left: 10px;
   margin-right: 10px;
