--- a/app/views/users/get_started.html.erb
+++ b/app/views/users/get_started.html.erb
@@ -13,7 +13,12 @@
           <div class='circle inline-block'>
           </div>
         </div>
-        <%= link_to "Activate Passive Monitoring", '/auth/google_oauth2', :target => "_blank" %>
+        <%= link_to "Activate Passive Monitoring with Google", "/auth/google_oauth2", :target => "_blank" %>
+        <div class='ellipse inline-block'>
+          <div class='circle inline-block'>
+          </div>
+        </div>
+        <%= link_to "Activate Passive Monitoring with Twitter", "/auth/twitter", :target => "_blank" %>
       </div>
       <div class='formDiv' id="divTwo">
         <h2 class='formHeader' id="tabOne">Build Support Network</h2>
