--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -34,18 +34,21 @@
       <% @user.triggers.each do |trigger| %>
         <div>
           <div class='inline-flex'>
-            <div><i id="toggle-up" class="fa fa-chevron-up block"></i></div>
-              <div class='block'> <span id='incDays'><%= trigger.duration_in_hours %></span> <span id='day'>day</span> :</div>
-            <div><i id="toggle-down" class="fa fa-chevron-down block"></i></div>
+            <%= link_to raw('<i class="fa fa-chevron-up block toggle-up"></i>'), trig_inc_path(trigger) %>
           </div>
-          <div class='inline-flex'>
-            <%= trigger.message_text %>...
+          <div class='block'>
+            <span class='incDays'><%= trigger.duration_in_hours %></span> <span class='day'>day</span>
+          </div>
+          <div>
+            <%= link_to raw('<i class="fa fa-chevron-down block toggle-down"></i>'), trig_dec_path(trigger) %>
+          </div>
+          <div class='inline-block'>
+            <%= trigger.message_text %>
           </div>
         </div>
       <% end %>
     </div>
     <div id='monitorsShow'>
-
     </div>
   </div>
 </div>
