Fix bugs on get started page, added create trigger to user show

--- a/app/views/supporters/_show.html.erb
+++ b/app/views/supporters/_show.html.erb
@@ -1,3 +1,4 @@
+<div>
 <li>
   <%= @supporter.first_name %> <%= @supporter.last_name %>
 </li>
@@ -11,3 +12,4 @@
   <%= @supporter.twitter %>
 </li>
 <%= link_to 'Edit', edit_user_supporter_path(@user, @supporter), :class => "editSupporter" %>
+</div>
