--- a/app/views/users/get_started.html.erb
+++ b/app/views/users/get_started.html.erb
@@ -9,16 +9,28 @@
       <div class='formDiv' id="divOne">
         <h2 class='formHeader' id="tabTwo">Enable Monitoring</h2>
         <p>Follow the link below to authorize Shift to monitor your Gmail for inactivity</p>
-        <div class='ellipse inline-block'>
-          <div class='circle inline-block'>
-          </div>
+        <div class='block'>
+          <%= link_to raw("<div class='ellipse inline-block'>
+            <div class='circle inline-block'>
+            </div>
+          </div>"), "/auth/google_oauth2", :target => "_blank" %>
+          <% if current_user.gmail_token.nil? %>
+            Activate Passive Monitor with Google
+          <% else %>
+            Google Monitoring Active!
+          <% end %>
         </div>
-        <%= link_to "Activate Passive Monitoring with Google", "/auth/google_oauth2", :target => "_blank" %>
-        <div class='ellipse inline-block'>
-          <div class='circle inline-block'>
-          </div>
+        <div class='block'>
+          <%= link_to raw("<div class='ellipse inline-block'>
+            <div class='circle inline-block'>
+            </div>
+          </div>"), "/auth/twitter", :target => "_blank" %>
+          <% if current_user.gmail_token.nil? %>
+            Activate Passive Monitor with Twitter
+          <% else %>
+            Twitter Monitoring Active!
+          <% end %>
         </div>
-        <%= link_to "Activate Passive Monitoring with Twitter", "/auth/twitter", :target => "_blank" %>
       </div>
       <div class='formDiv' id="divTwo">
         <h2 class='formHeader' id="tabOne">Build Support Network</h2>
@@ -33,8 +45,8 @@
     </div>
   </div>
   <div class='row' id='<%=@user.id%>'>
-    <div class='col-md-3' id='backButton'><h3><i class="fa fa-chevron-left"></i> Go Back</h3></div>
-    <div class='col-md-3 col-md-offset-6' id='nextButton'><h3>Next Step <i class="fa fa-chevron-right"></i></h3></div>
+    <div class='col-md-3 cursorPointer' id='backButton'><h3><i class="fa fa-chevron-left"></i> Go Back</h3></div>
+    <div class='col-md-3 col-md-offset-6 cursorPointer' id='nextButton'><h3>Next Step <i class="fa fa-chevron-right"></i></h3></div>
   </div>
   <div class='row'>
     <div class='col-xs-6' id='network'>
