Feature added for toggling a monitor and triggers

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -5,3 +5,43 @@ li.sideNav {
 .settingsShow {
   padding-top: 55px;
 }
+
+.table
+{
+  display:table;
+  border-collapse:separate;
+  border-spacing:2px;
+}
+.thead
+{
+  display:table-header-group;
+  color:white;
+  font-weight:bold;
+  background-color:grey;
+}
+.tbody
+{
+  display:table-row-group;
+}
+.tr
+{
+  display:table-row;
+}
+.td
+{
+  display:table-cell;
+  border:1px solid black;
+  padding:1px;
+}
+
+.maxTable {
+  width: 100%
+}
+
+.red {
+}
+
+.marginNineteen .circle {
+  background-color: red;
+  margin-left: 19px;
+}
