--- a/app/views/triggers/_show.html.erb
+++ b/app/views/triggers/_show.html.erb
@@ -12,3 +12,7 @@
     <%= @trigger.message_text %>
   </div>
 </div>
+<%#= link_to raw("<div class='ellipse inline-block'>
+            <div class='circle inline-block'>
+            </div>
+          </div>"), toggle_twitter_trig_path(current_user), :class => 'toggleActive' %>
