should work in theory (lol)

--- a/app/views/triggers/_new.html.erb
+++ b/app/views/triggers/_new.html.erb
@@ -3,7 +3,7 @@
   <div class='col-md-6'>
     <div class='inline-block width155'>
       <select name='method'>
-        <option value="Email Activity">Email Activity</option>
+        <option value="check_email_activity">Email Activity</option>
         <option value="Email Sentiment">Email Sentiment</option>
         <option value="Twitter Sentiment">Twitter Sentiment</option>
       </select>
