More bug fixes on dash board

--- a/app/views/supporters/_show.html.erb
+++ b/app/views/supporters/_show.html.erb
@@ -1,15 +1,13 @@
-<div>
-<li>
-  <%= @supporter.first_name %> <%= @supporter.last_name %>
-</li>
-<li>
-  <%= @supporter.phone %>
-</li>
-<li>
-  <%= @supporter.gmail %>
-</li>
-<li>
-  <%= @supporter.twitter %>
-</li>
-<%= link_to 'Edit', edit_user_supporter_path(@user, @supporter), :class => "editSupporter" %>
-</div>
+  <li>
+    <%= @supporter.first_name %> <%= @supporter.last_name %>
+  </li>
+  <li>
+    <%= @supporter.phone %>
+  </li>
+  <li>
+    <%= @supporter.gmail %>
+  </li>
+  <li>
+    <%= @supporter.twitter %>
+  </li>
+  <%= link_to 'Edit', edit_user_supporter_path(@user, @supporter), :class => "editSupporter marginTwentySix" %> <%= link_to 'Delete', delete_supporter_path(current_user, @supporter), :class => "deleteSupporter" %>
