--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 				<div class="col-sm-12 col-md-12 col-lg-12 headline centered">
 					<h2>sometimes you just need a little nudge</h2>
 				</div>
-				<button class="btn btn-primary btn-lg centered">signup</button>
+				<button class="btn btn-primary btn-lg centered"><%= link_to 'sign-up', new_session_path %></button>
 			</div>
 		</section>
 	</div>
@@ -49,7 +49,7 @@
 			 <h3 class="xlarge-headline">watch your progress</h3>
 			 <p class="xlarge-subheadline text-center">at nudge we use our homemade passive monitoring tools to keep track of how you express your feelings. view how your mood and your actions correlate to help you tune your nudges and move towards a healthier, happier you.</p>
 			</div>
-			
+
 		</section>
 	</div>
 </div>
