changed trigger form to have correct method values for the tasks

--- a/app/views/triggers/_new.html.erb
+++ b/app/views/triggers/_new.html.erb
@@ -4,8 +4,8 @@
     <div class='inline-block width155'>
       <select name='method'>
         <option value="check_email_activity">Email Activity</option>
-        <option value="Email Sentiment">Email Sentiment</option>
-        <option value="Twitter Sentiment">Twitter Sentiment</option>
+        <option value="check_email_sentiment">Email Sentiment</option>
+        <option value="check_twitter_sentiment">Twitter Sentiment</option>
       </select>
       Message:
     </div>
