--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 				<div class="col-sm-12 col-md-12 col-lg-12 headline centered">
 					<h2>sometimes you just need a little nudge</h2>
 				</div>
-				<button class="btn btn-primary btn-lg centered"><%= link_to 'sign-up', new_session_path %></button>
+				<%= link_to 'sign-up', new_session_path, class: "btn btn-primary btn-lg centered" %>
 			</div>
 		</section>
 	</div>
