--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
         <li><a href="#" class='navLink' id="activity">Activity</a></li>
         <li><a href="#" class='navLink' id="settings">Settings</a></li>
         <li><a href="#" class='navLink' id="account">Account</a></li>
-        <li><%= link_to 'Logout', logout_path %></li>
+        <li class='right'><%= link_to 'Logout', logout_path %></li>
       </ul>
     </div>
   </div>
