error message fade out for triggers and support network

--- a/app/views/triggers/_edit.html.erb
+++ b/app/views/triggers/_edit.html.erb
@@ -5,6 +5,6 @@
     <div><i id="toggle-down" class="fa fa-chevron-down"></i></div>
   </div>
   <div class='inline-block'>
-    <%= @trigger.text] %>
+    <%= @trigger.text %>
   </div>
 </div>
