--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -17,7 +17,7 @@ li.sideNav {
   display:table-header-group;
   color:white;
   font-weight:bold;
-  background-color:grey;
+  background-color: gray;
 }
 .tbody
 {
