--- a/app/views/users/get_started.html.erb
+++ b/app/views/users/get_started.html.erb
@@ -10,26 +10,28 @@
         <h2 class='formHeader' id="tabTwo">Enable Monitoring</h2>
         <p>Follow the link below to authorize Shift to monitor your Gmail for inactivity</p>
         <div class='block'>
-          <%= link_to raw("<div class='ellipse inline-block'>
-            <div class='circle inline-block'>
-            </div>
+          <%= link_to raw("<div class='inline-block'>
+            <i class='fa fa-google'></i>
           </div>"), "/auth/google_oauth2", :target => "_blank", :id => 'googleAuth' %>
-          <% if current_user.gmail_token.nil? %>
-            Authorize Passive Monitor with Google
-          <% else %>
-            Google Monitoring Authorized!
-          <% end %>
+          <span class='authLink'>
+            <% if current_user.gmail_token.nil? %>
+              authorize nudge with google
+            <% else %>
+              google monitoring authorized!
+            <% end %>
+          </span>
         </div>
         <div class='block'>
-          <%= link_to raw("<div class='ellipse inline-block'>
-            <div class='circle inline-block'>
-            </div>
+          <%= link_to raw("<div class='inline-block'>
+            <i class='fa fa-twitter'></i>
           </div>"), "/auth/twitter", :target => "_blank", :id => 'twitterAuth' %>
-          <% if current_user.gmail_token.nil? %>
-            Authorize Passive Monitor with Twitter
-          <% else %>
-            Twitter Monitoring Authorized!
-          <% end %>
+          <span class='authLink'>
+            <% if current_user.gmail_token.nil? %>
+              authorize nudge with twitter
+            <% else %>
+              twitter monitoring authorized!
+            <% end %>
+          </span>
         </div>
       </div>
       <div class='formDiv' id="divTwo">
@@ -52,13 +54,5 @@
   <div class='row' id='<%=@user.id%>'>
     <div class='col-md-3 cursorPointer' id='backButton'><h3><i class="fa fa-chevron-left"></i> Go Back</h3></div>
     <div class='col-md-3 col-md-offset-6 cursorPointer' id='nextButton'><h3>Next Step <i class="fa fa-chevron-right"></i></h3></div>
-  </div>
-  <div class='row'>
-    <div class='col-xs-6' id='network'>
-      <h3>Your Support</h3>
-    </div>
-    <div class='col-xs-6' id='notifications'>
-      <h3>Your Notifications</h3>
-    </div>
   </div>
 </div>
