--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class='collapse navbar-collapse'>
       <ul class='nav navbar-nav'>
-        <li><a href="#" class='navLink'>Home</a></li>
+        <li><a href="#" class='navLink' id='home'>Home</a></li>
         <li><a href="#" class='navLink' id="activity">Activity</a></li>
         <li><a href="#" class='navLink' id="settings">Settings</a></li>
         <li><a href="#" class='navLink' id="account">Account</a></li>
