front end fixes cont.

--- a/app/views/supporters/_error.html.erb
+++ b/app/views/supporters/_error.html.erb
@@ -1,2 +1,2 @@
 
-<p class='disappear'>Contact must have full name and valid phone number!</p>
+<p class='disappear'>enter full name and valid phone number</p>
