--- a/app/views/triggers/_new.html.erb
+++ b/app/views/triggers/_new.html.erb
@@ -8,7 +8,7 @@
       </select>
     <div class='block width155'>
       <span id='triggerSentimentNotification'>texts for sentiment analysis are only sent to you</span>
-
+      <span id='errorMessageArea'></span>
       <p class='messageHeader'>message:</p>
     </div>
     <div class='inline-block'>
