centered the thingy on the other thing with the things

--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -49,7 +49,7 @@
                 </div>
                 </div>"), trig_toggle_path(trigger), :class => trigger.active ? "toggleTwitterTriggers" : "toggleTwitterTriggers marginNineteen" %>
               </div>
-              <div class='td'>
+              <div class='td add-substract-days'>
                 <div class='inline-flex'>
                   <%= link_to raw('<i class="fa fa-plus"></i>'), trig_inc_path(trigger), class: "toggle-up" %>
                 </div>
